traffic-split/envoy/envoy-proxy.yaml
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8881
      
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          use_remote_address: true
          skip_xff_append: false
          stat_prefix: ingress_http
          ## Defaults to envoy
          server_name: "envoy"
          route_config:
            name: local_route
            virtual_hosts:
            - name: split_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  weighted_clusters:
                    runtime_key_prefix: routing.traffic_split.split_service
                    clusters:
                      - name: web1
                        weight: 33
                      - name: web2
                        weight: 33
                      - name: web3
                        weight: 34
          http_filters:
            - name: envoy.router
  clusters:
  - name: web1
    connect_timeout: 5s
    type: LOGICAL_DNS
    hosts: [{ socket_address: { address: web1, port_value: 80 }}]
  - name: web2
    connect_timeout: 5s
    type: LOGICAL_DNS
    hosts: [{ socket_address: { address: web2, port_value: 80 }}]
  - name: web3
    connect_timeout: 5s
    type: LOGICAL_DNS
    hosts: [{ socket_address: { address: web3, port_value: 80 }}]
